2021-06-28 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.c: fixed issue with not encoded user & pass in the URL

2021-03-18  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_spool.c: fix error based memory leaks. NLC.
    
2021-03-04  Stipe Tolj  <stolj at kannel.org>
    * utils/mtbatch.c: add support for various codings (7bit, 8bit, Unicode) via
      '-c coding' and character transocing via option '-C charset'.
      
2021-03-02  Stipe Tolj  <stolj at kannel.org>
    * utils/mtbatch.c: add '-M meta-data' support.
    
2020-11-09  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: change default HTTP client side timeout from 240s to 30s.
     
2020-10-29  Stipe Tolj  <stolj at kannel.org>
    * gw/meta_data.[ch]: implement meta_data_remove_value() to allow removing values
      from a group.
      
2020-06-19  Stipe Tolj  <stolj at kannel.org>
    * bb_smscconn.c: fix smsc2_remove_smsc() which didn't calibrate the i counter
      when a SMSC connection is removed, so we would step over one index in the list
      without trying to match it's smsc-id, and fix smsc2_add_smsc() for SMSC group
      with multiple instances indicated, this would only start-up one instance, 
      even if several would be configured.
    Thanks to Roberto Facchin for providing the reporting.
    [Msg-Id: <674281A5-E42B-4B2F-9D0C-1C5328787FDB@getmailspring.com>]
    
2020-06-08  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document new 'reroute-receiver-regex' directive.
    * gw/bb_smscconn.c: handle 'reroute-receiver-regex' in route_incoming_to_smsc().
    * gw/smscconn_p.h: add a List in struct smscconn for reroute-receiver-regex.
    * gw/smscconn.c: init and de-init handling of reroute-receiver-regex.
    * gwlib/cfg.def: add directive 'reroute-receiver-regex'.
    This patchset allows defining regex patterns for receiver numbers when doing 
    re-routing of MOs towards MTs.
    
2020-06-03  Stipe Tolj  <stolj at kannel.org>